# pipe-visitantes

./: .gitignore  README.md  pipe_visitantes.py  pyproject.toml  requirements.txt
config/: logging_config.py
files/: RelatorioClientes.xlsx  RelatorioFollowups.xlsx  visitantes.xlsx
logs/: log.app
pipe_visitantes/: extraction.py  load.py  transform.py
